--- a/style.css
+++ b/style.css
@@ -77,11 +77,11 @@ a:active {
 /* modal */
 .modal-container {
   background-color: rgba(15, 83, 74, 0.5);
-  width: 700px;
+  width: 600px;
   /* min-width: 90%; */
   border-radius: 10px;
   text-align: center;
-  
+
   animation: modalopen 1s;
   z-index: 10;
   position: fixed;
@@ -103,20 +103,22 @@ a:active {
 .modal-title h3 {
   font-size: 40px;
   display: block;
-  padding: 10px;
   color: #fff;
   text-shadow: 0 5px 5px #000000;
+  margin: 0px;
+  padding: 10px 0px;
 }
 
 .modal-container label {
   display: block;
   font-size: 20px;
-  margin: 20px 0;
+  padding: 5px 0px;
 }
 .modal-container input {
   padding: 10px 50px;
   border-radius: 20px;
   border: none;
+  margin-top: 10px;
 }
 .modal-container i {
   float: right;
@@ -130,7 +132,7 @@ a:active {
 
 button {
   display: block;
-  margin: 40px auto;
+  margin: 20px auto;
   padding: 10px 100px;
   color: #fff;
   background-color: #000000;
@@ -158,7 +160,7 @@ button {
     flex-direction: column;
   }
 
-  .modal-container{
+  .modal-container {
     width: unset;
     width: 85vw;
   }
